# scroll_magic_book

./: .env  Cargo.toml  README.md
knowledge/: scroll_magic_book.txt  scroll_magic_report.txt
src/: main.rs  mod.rs  response.rs
src/agents/: mod.rs  processing_agent.rs  report_agent.rs
src/connection/: client.rs  provider.rs
src/services/: mod.rs
src/services/getter/: market.rs  mod.rs
src/tools/: mod.rs  tools_map.rs  utils.rs
src/tools/wrappers/: getters.rs
