[package]
name = "scroll_magic_book"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
reqwest = "0.12.22"

# Genai
# genai = "=0.1.7"
genai = "0.3.5"

# Enviroment
dotenv-flow = "0.16.2"
serde_json = "1.0.141"
once_cell = "1.21.3"

# Onchain
alloy = "1.0.23"


